Fix dark mode on mobile in BCD

--- a/client/src/document/ingredients/browser-compatibility-table/index.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/index.scss
@@ -239,6 +239,7 @@
 
 .bc-notes-wrapper {
   margin-bottom: 1rem;
+  color: var(--text-primary);
 
   &:last-child {
     margin-bottom: 0;
